--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+asgiref==3.4.1
 attrs==21.2.0
 backcall==0.2.0
 black==21.9b0
 click==8.0.1
 decorator==5.0.9
+Django==3.2.9
+djangorestframework==3.12.4
 flake8==3.9.2
 Flask==2.0.2
 gunicorn==20.1.0
@@ -30,7 +33,9 @@ pycodestyle==2.7.0
 pyflakes==2.3.1
 Pygments==2.9.0
 pyparsing==2.4.7
+pytz==2021.3
 regex==2021.9.30
+sqlparse==0.4.2
 toml==0.10.2
 tomli==1.2.1
 traitlets==5.0.5
