--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,15 @@ decorator==5.1.0
 dj-database-url==0.5.0
 Django==3.2.9
 djangorestframework==3.12.4
+flake8==4.0.1
 future==0.18.2
 geocoder==1.38.1
 gunicorn==20.1.0
 idna==3.3
+mccabe==0.6.1
 psycopg2-binary==2.9.2
+pycodestyle==2.8.0
+pyflakes==2.4.0
 pytz==2021.3
 ratelim==0.1.6
 requests==2.26.0
